// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export named-source1 1`] = `
ScopeManager {
  variables: [
    ImplicitGlobalConstTypeVariable,
  ],
  scopes: [
    GlobalScope$1 {
      block: Program$1,
      isStrict: false,
      references: [],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
      },
      type: "global",
      upper: null,
      variables: [
        ImplicitGlobalConstTypeVariable,
      ],
    },
    ModuleScope$2 {
      block: Program$1,
      isStrict: true,
      references: [],
      set: Map {},
      type: "module",
      upper: GlobalScope$1,
      variables: [],
    },
  ],
}
`;

exports[`tests/fixtures.test.ts > export > named-source1 1`] = `
ScopeManager {
  variables: Array [
    ImplicitGlobalConstTypeVariable,
  ],
  scopes: Array [
    GlobalScope$1 {
      block: Program$1,
      isStrict: false,
      references: Array [],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
      },
      type: "global",
      upper: null,
      variables: Array [
        ImplicitGlobalConstTypeVariable,
      ],
    },
    ModuleScope$2 {
      block: Program$1,
      isStrict: true,
      references: Array [],
      set: Map {},
      type: "module",
      upper: GlobalScope$1,
      variables: Array [],
    },
  ],
}
`;
